Fixed issue with seacrh input not being stretched

--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,7 @@
   form{
     width: 100%;
     display: block;
+    min-width: 600px;
   }
   
   #search {
